// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row component should render correctly with alignItems prop 1`] = `
<div
  className="sc-kDTinF ScvvZ"
/>
`;

exports[`Row component should render correctly with margin all sides prop 1`] = `
<div
  className="sc-kDTinF dXdwna"
/>
`;

exports[`Row component should render correctly with margin each axis prop 1`] = `
<div
  className="sc-kDTinF cuqA-Dd"
/>
`;

exports[`Row component should render correctly with margin each sides props 1`] = `
<div
  className="sc-kDTinF hoEDCo"
/>
`;

exports[`Row component should render correctly without props 1`] = `
<div
  className="sc-kDTinF jZHtsG"
/>
`;
